syntax="proto3";

option java_outer_classname="Domain";
  
package pb;

enum Type {
    LOGIN = 0;
    LOGOUT = 1;
    PLAYER = 2;
    LOGIN_RESULT = 3;
}

message Msg{
    Type type = 1;
    oneof union {
        Player player = 2;
        Login login = 3;
        Logout logout = 4;
        LoginResult loginResult = 5;
    }
}

message Login {
    string pid = 1;
    string passwd = 2;
}

message LoginResult {
    bool success = 1;
    Player player = 2;
}

message Logout {}

message Player {
    string pid = 1;
    string passwd = 2;
    int32 age = 3;
}